--- a/.github/workflows/syncGit.yml
+++ b/.github/workflows/syncGit.yml
@@ -26,7 +26,7 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/danwangshimoluo/JdScripts.git"
-          source_branch: "JdScripts"
+          source_branch: "main"
           destination_branch: "main"
           github_token: ${{ secrets.PAT }}
       # 我自己同步到gitee使用，其他人可忽略
